fix: ajustando swagger
